add property to javascript

--- a/index.html
+++ b/index.html
@@ -38,5 +38,6 @@
     </main>
     <footer class="footer"></footer>
 </body>
-<script src="src/js/app.js"></script>
+<script src="src/js/app.js" type="module"></script>
+
 </html>
